formspree form integration

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                         Have questions about Velox 1? Want to learn more about the Race Roulette format? We'd love to hear from you.
                     </p>
                     
-                    <form class="contact-form" id="contact-form">
+                    <form class="contact-form" id="contact-form" action="https://formspree.io/f/mqaldnql" method="POST">
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="firstName" class="form-label">First Name</label>
