--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="container">
             <div class="join-content">
                 <div class="join-form-section">
-                    <form class="join-form" id="stay-updated-form">
+                    <form class="join-form" id="stay-updated-form" action="https://formspree.io/f/xrblajqg" method="POST">
                         <p class="form-subtitle">Get notified about future events and league updates</p>
                         
                         <div class="form-group">
@@ -142,8 +142,8 @@
                         </div>
 
                         <button type="submit" class="trial-signup-button">Stay Updated</button>
-      </form>
-    </div>
+                    </form>
+                </div>
                 
                 <div class="social-section">
                     <h3 class="social-title">Connect With Us</h3>
