Logo animation - replay button addition

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                         <!-- Phase 4: Final brand logo -->
                         <img src="./images/Brand Logo for Animation.svg" alt="Final Brand Logo" class="logo-final" id="logo-final">
                     </div>
+                    <!-- Replay Animation Button -->
+                    <button class="replay-animation-btn" id="replay-animation-btn" type="button">
+                        <svg class="replay-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 4V10H7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M3.51 15A9 9 0 1 0 6 5L1 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        Replay Animation
+                    </button>
                 </div>
                 
                 <div class="about-tagline">
